modified:   Plato_3.0/README

--- a/Plato_3.0/README
+++ b/Plato_3.0/README
@@ -4,3 +4,24 @@ Copyright © 2025, Quira Walker. All Rights Reserved.
 This Code is licensed under the "GNU AGPL" License, a copy of this license is contained in this Folder.
 If you did not receive a copy, you may find it at: https://www.gnu.org/licenses/agpl-3.0.html
 
+Welcome to Plato, a Discord Bot I made as a culmination of works.
+This bot has many different features and is gonna be pretty wild
+once 100% done... is anything we make ever really done though...?
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+                    PROGRAM INFORMATION
+
+    Program Name:           Plato Bot
+    License:                GNU AGPLv3
+    Creator:                Quira Walker
+    Contact (via Discord):  cutiequira
+    Special Credit Creator: Hackysack™
+    Original Creation:      2024
+    Released:               May-2025
+    Updated:                May-2025
+    Program Version:        3.0.0
+    Program Code Language:  Python (3.11.2 64bit)
+    Main Program File:      Plato_Bot.PY
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
