modified:   Plato_3/Policies_&_Licenses/Privacy_Policy/README 	modified:   Plato_3/Policies_&_Licenses/Terms_of_Service/README

--- a/Plato_3/Policies_&_Licenses/Privacy_Policy/README
+++ b/Plato_3/Policies_&_Licenses/Privacy_Policy/README
@@ -3,3 +3,9 @@ required to be followed when making Discord Bots and I chose to make sure it was
 available here in my code as well.
 
 https://support-dev.discord.com/hc/en-us/articles/8563934450327-Discord-Developer-Policy
+
+
+
+Plato's Privacy Policy can be found at the below link.
+
+https://qswalker.trinket.io/sites/plato_privacy_policy
