--- a/Plato_3/Policies_&_Licenses/Terms_of_Service/README
+++ b/Plato_3/Policies_&_Licenses/Terms_of_Service/README
@@ -3,3 +3,9 @@ This Policy is required to be followed when making Discord Bots and I chose to
 make sure it was easily available here in my code as well.
 
 https://support-dev.discord.com/hc/en-us/articles/8562894815383-Discord-Developer-Terms-of-Service
+
+
+
+Plato's Terms of Service can be found at the below link.
+
+https://qswalker.trinket.io/sites/plato_terms_of_service
