modified:   Plato_3/Cogs/systemCog.py 	modified:   Plato_3/README 	modified:   Plato_3/Settings/botSettings.py 	deleted:    Plato_3/Settings/serverSetting.py

--- a/Plato_3/README
+++ b/Plato_3/README
@@ -4,6 +4,9 @@ Copyright © 2025, Quira Walker. All Rights Reserved.
 This Code is licensed under the "GNU AGPL" License, a copy of this license is contained in this Folder.
 If you did not receive a copy, you may find it at: https://www.gnu.org/licenses/agpl-3.0.html
 
+TOS & Privacy Policies can be found in thee Policies_&_Licenses folder, Copies of the Discord Bot
+Developers TOS & Privacy Policies are also included there as well.
+
 Welcome to Plato, a Discord Bot I made as a culmination of works.
 This bot has many different features and is gonna be pretty wild
 once 100% done... is anything we make ever really done though...?
@@ -23,5 +26,9 @@ once 100% done... is anything we make ever really done though...?
     Program Version:        3.2.6
     Program Code Language:  Python (3.11.2 64bit)
     Main Program File:      Plato_Bot.PY
+
+    For Terms & Policy issues or general
+    issues and/or concerns please email:
+        plato_bot@outlook.com
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
